udpate image filename

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-slate-300 flex items-center justify-center min-h-screen py-6">
     <div class="bg-slate-100 max-w-md mx-auto my-auto p-6 rounded-4xl shadow-lg h-fit space-y-4">
-        <img class="rounded-xl aspect-video object-cover" src="IMG_20241217_124619_758.jpg" alt="Foto Profil Nana">
+        <img class="rounded-xl aspect-video object-cover" src="prana.jpg" alt="Foto Profil Nana">
         <h1 class="font-bold text-xl">Prana Dian Adriyani</h1>
         <p class="profile-desc">Halo! Saya Nana, seorang Accounting officer yang suka rebahan dan makan. Saya senang mencoba tempat makan baru dan berbagi makanan.</p>
         <ul class="grid grid-cols-2 gap-4">
